AdoptaUnLomito.html modificado

--- a/AdoptaUnLomito.html
+++ b/AdoptaUnLomito.html
@@ -42,7 +42,7 @@
             <div class="row adoptaUnLomito__container">
                 <div class="adoptaUnLomito__content--info">
                     <img class="col-3" src="images/perritoTierno3.jpg" alt="">
-                    <p class="adoptaUnLomito__content--text">Este peíto tiene de nombre Ruffles, sabe dar la pata y persigue 
+                    <p class="adoptaUnLomito__content--text">Este peíto se llama Ruffles, sabe dar la pata y persigue 
                         su cola cuando está aburrido.
                     </p>
                 </div>
